# SQLCoder

./: README.md
data/: test_schemas.pkl
src/: README.md  app.py  config.py  extract_schemas.py  inference.py  pyproject.toml  train.py  train_base_hro_model  train_small_hro_model  utils.py
src/data/: eda.py  loader.py  process.py  wiki_sql_loader.py
src/evaluation/: metrics.py
src/model/: text_to_sql.py  utils.py
src/sanitizer/: sql_sanitizer.py  test.py
src/tests/: test_processor.py  test_sql_sanitizer.py  test_utils.py
